Networking, UI and etc...

--- a/TopWeather/Views/Controllers/Main/Base.lproj/Main.storyboard
+++ b/TopWeather/Views/Controllers/Main/Base.lproj/Main.storyboard
@@ -22,8 +22,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LRY-kZ-P2h">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="220"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eZU-ul-6eZ">
-                                        <rect key="frame" x="166.5" y="109" width="42" height="20"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eZU-ul-6eZ">
+                                        <rect key="frame" x="15" y="109" width="41.5" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="eAo-xQ-g0z"/>
                                         </constraints>
@@ -31,8 +31,8 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nac-ST-NKd">
-                                        <rect key="frame" x="158" y="139" width="59" height="40"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nac-ST-NKd">
+                                        <rect key="frame" x="15" y="139" width="59" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="BbS-Xv-biL"/>
                                         </constraints>
@@ -46,6 +46,11 @@
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="go" textContentType="address-level2"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="placeholderLabel.textColor">
+                                                <color key="value" red="0.82378536410000003" green="0.57322493529999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bI5-k6-yJe">
                                         <rect key="frame" x="10" y="54.5" width="50" height="35"/>
@@ -75,8 +80,8 @@
                                             <action selector="searchBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oFD-Kt-gUd"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iAf-Ic-jdb">
-                                        <rect key="frame" x="166.5" y="189" width="42" height="20"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iAf-Ic-jdb">
+                                        <rect key="frame" x="15" y="189" width="41.5" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="ckt-9c-UYb"/>
                                         </constraints>
@@ -87,18 +92,18 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="iAf-Ic-jdb" firstAttribute="leading" secondItem="LRY-kZ-P2h" secondAttribute="leading" constant="15" id="1pJ-Om-WRK"/>
                                     <constraint firstItem="eZU-ul-6eZ" firstAttribute="top" secondItem="Ydl-xo-UUE" secondAttribute="bottom" constant="20" id="55e-1m-E3w"/>
                                     <constraint firstItem="Ydl-xo-UUE" firstAttribute="centerX" secondItem="LRY-kZ-P2h" secondAttribute="centerX" id="G64-GZ-CyL"/>
                                     <constraint firstItem="Nac-ST-NKd" firstAttribute="top" secondItem="eZU-ul-6eZ" secondAttribute="bottom" constant="10" id="HG2-X0-tAa"/>
-                                    <constraint firstItem="Nac-ST-NKd" firstAttribute="centerX" secondItem="LRY-kZ-P2h" secondAttribute="centerX" id="JYQ-JM-VSr"/>
                                     <constraint firstItem="Ydl-xo-UUE" firstAttribute="top" secondItem="LRY-kZ-P2h" secondAttribute="top" constant="55" id="M74-Rr-YSz"/>
+                                    <constraint firstItem="Nac-ST-NKd" firstAttribute="leading" secondItem="LRY-kZ-P2h" secondAttribute="leading" constant="15" id="Ngg-eb-TR7"/>
                                     <constraint firstItem="JNh-99-SIU" firstAttribute="centerY" secondItem="Ydl-xo-UUE" secondAttribute="centerY" id="VcB-bT-rGZ"/>
                                     <constraint firstItem="bI5-k6-yJe" firstAttribute="centerY" secondItem="Ydl-xo-UUE" secondAttribute="centerY" id="WOL-ON-Xs7"/>
-                                    <constraint firstItem="iAf-Ic-jdb" firstAttribute="centerX" secondItem="LRY-kZ-P2h" secondAttribute="centerX" id="ZUk-os-1VI"/>
                                     <constraint firstAttribute="height" constant="220" id="cZ9-O5-Jzz"/>
-                                    <constraint firstItem="eZU-ul-6eZ" firstAttribute="centerX" secondItem="LRY-kZ-P2h" secondAttribute="centerX" id="ctc-eZ-hV2"/>
                                     <constraint firstItem="JNh-99-SIU" firstAttribute="leading" secondItem="Ydl-xo-UUE" secondAttribute="trailing" constant="20" id="d5A-7N-DZb"/>
                                     <constraint firstAttribute="trailing" secondItem="JNh-99-SIU" secondAttribute="trailing" constant="10" id="g00-S9-PHl"/>
+                                    <constraint firstItem="eZU-ul-6eZ" firstAttribute="leading" secondItem="LRY-kZ-P2h" secondAttribute="leading" constant="15" id="lXL-CB-kEZ"/>
                                     <constraint firstItem="Ydl-xo-UUE" firstAttribute="leading" secondItem="bI5-k6-yJe" secondAttribute="trailing" constant="20" id="m2y-No-NPh"/>
                                     <constraint firstItem="bI5-k6-yJe" firstAttribute="leading" secondItem="LRY-kZ-P2h" secondAttribute="leading" constant="10" id="n1d-s6-MA4"/>
                                     <constraint firstItem="iAf-Ic-jdb" firstAttribute="top" secondItem="Nac-ST-NKd" secondAttribute="bottom" constant="10" id="wZx-M4-yg7"/>
